--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,67 +9,63 @@
 
 /* Color variables */
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-  --light-gray: #f0f2f7;
-  --light-gray-alt: #e4e7ef;
-  --dark-gray: #a7a9b0;
-  --dark-gray-alt: #4f5362;
-  --dark-blue: #2a405b;
-  --dark-blue-alt: #222328;
-  --blue: #3b55e6;
-  --blue-alt: #6269CD;
-  --blue-alt-ctrl: #181e4b;
-  --yellow: #f3d351;
-  --yellow-alt: #ebc63b;
-  --orange: #fe5339;
-  --orange-alt: #f78b64;
-  --purple-light: #c8bdff;
-  --purple: #4e376b;
-  --purple-alt: #32214d;
-  --aqua: #51dae7;
-  --aqua-alt: #32cdda;
-  --green: #4be1ab;
-  --green-alt: #42d29e;
-  --bg-color: #f7f6f9;
-  --line-border-fill: #9c27b0;
-  --line-border-empty: #bdbdbd;
+   --foreground-rgb: 0, 0, 0;
+   --background-start-rgb: 214, 219, 220;
+   --background-end-rgb: 255, 255, 255;
+   --light-gray: #f0f2f7;
+   --light-gray-alt: #e4e7ef;
+   --dark-gray: #a7a9b0;
+   --dark-gray-alt: #4f5362;
+   --dark-blue: #2a405b;
+   --dark-blue-alt: #222328;
+   --blue: #3b55e6;
+   --blue-alt: #6269cd;
+   --blue-alt-ctrl: #181e4b;
+   --yellow: #f3d351;
+   --yellow-alt: #ebc63b;
+   --orange: #fe5339;
+   --orange-alt: #f78b64;
+   --purple-light: #c8bdff;
+   --purple: #4e376b;
+   --purple-alt: #32214d;
+   --aqua: #51dae7;
+   --aqua-alt: #32cdda;
+   --green: #4be1ab;
+   --green-alt: #42d29e;
+   --bg-color: #f7f6f9;
+   --line-border-fill: #9c27b0;
+   --line-border-empty: #bdbdbd;
 }
 
 @media (prefers-color-scheme: light) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+   :root {
+      --foreground-rgb: 255, 255, 255;
+      --background-start-rgb: 0, 0, 0;
+      --background-end-rgb: 0, 0, 0;
+   }
 }
 
 /* Global styles */
 * {
-  box-sizing: border-box;
-  font-family: 'Montserrat', sans-serif;
-  margin: 0;
-  padding: 0;
+   box-sizing: border-box;
+   font-family: 'Montserrat', sans-serif;
+   margin: 0;
+   padding: 0;
 }
 
 html {
-  scroll-behavior: smooth;
+   scroll-behavior: smooth;
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+   color: rgb(var(--foreground-rgb));
+   background: linear-gradient(to bottom, transparent, rgb(var(--background-end-rgb)))
+      rgb(var(--background-start-rgb));
 }
 
 /* Additional custom styles */
 .comp-cont-el {
-  display: none;
+   display: none;
 }
 
 /* .page-loader-animation {
@@ -103,7 +99,7 @@ body {
 
 /* Tailwind utility layer */
 @layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+   .text-balance {
+      text-wrap: balance;
+   }
 }
