--- a/src/assets/styles/festival.css
+++ b/src/assets/styles/festival.css
@@ -1,577 +1,572 @@
 .bg-color-el {
-  background-color: var(--bg-color);
+   background-color: var(--bg-color);
 }
 .view-btns {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 0.3rem;
-  position: fixed;
-  min-height: 60px;
-  max-width: 20%;
-  margin: 0 auto;
-  left: 50%;
-  top: 0;
-  transform: translateX(-50%);
-  z-index: 101;
-  animation: fadeIn 0.8s;
-  -webkit-animation: fadeIn 0.5s;
-  -moz-animation: fadeIn 0.5s;
-  -o-animation: fadeIn 0.5s;
-  -ms-animation: fadeIn 0.5s;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   gap: 0.3rem;
+   position: fixed;
+   min-height: 60px;
+   max-width: 20%;
+   margin: 0 auto;
+   left: 50%;
+   top: 0;
+   transform: translateX(-50%);
+   z-index: 101;
+   animation: fadeIn 0.8s;
+   -webkit-animation: fadeIn 0.5s;
+   -moz-animation: fadeIn 0.5s;
+   -o-animation: fadeIn 0.5s;
+   -ms-animation: fadeIn 0.5s;
 }
 a {
-  text-decoration: none;
+   text-decoration: none;
 }
 
 .icon-navbar-view {
-  position: relative;
-  color: var(--bg-color);
-  /* background-color: #313236; */
-  background-color: var(--dark-blue-alt);
-  border-radius: 10px;
-  padding: 15px;
-  margin: 0;
-  width: 85px;
-  height: 40px;
-  font-size: 18px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  /* border: solid 1px var(--bg-color); */
-  box-shadow: 0 10px 10px rgba(0, 0, 0, 0.1);
-  cursor: pointer;
-  transition: all 0.2s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+   position: relative;
+   color: var(--bg-color);
+   /* background-color: #313236; */
+   background-color: var(--dark-blue-alt);
+   border-radius: 10px;
+   padding: 15px;
+   margin: 0;
+   width: 85px;
+   height: 40px;
+   font-size: 18px;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   flex-direction: column;
+   /* border: solid 1px var(--bg-color); */
+   box-shadow: 0 10px 10px rgba(0, 0, 0, 0.1);
+   cursor: pointer;
+   transition: all 0.2s cubic-bezier(0.68, -0.55, 0.265, 1.55);
 }
 .icon-navbar-view.active-rn {
-  color: var(--blue-alt);
+   color: var(--blue-alt);
 }
 .icon-navbar-view.active-rn::before {
-  position: absolute;
-  content: "";
-  width: 100%;
-  height: 4px;
-  background: #6154f3;
-  bottom: -0.645rem;
-  left: 0;
+   position: absolute;
+   content: '';
+   width: 100%;
+   height: 4px;
+   background: #6154f3;
+   bottom: -0.645rem;
+   left: 0;
 }
 .icon-navbar-view span {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+   display: flex;
+   justify-content: center;
+   align-items: center;
 }
 
 .tooltip-timeline {
-  text-align: center;
-  width: 120px;
-  position: absolute;
-  top: 0;
-  font-size: 10px;
-  background-color: #ffffff;
-  color: #ffffff;
-  padding: 0.5rem 1rem;
-  border-radius: 5px;
-  box-shadow: 0 10px 10px rgba(0, 0, 0, 0.1);
-  opacity: 0;
-  pointer-events: none;
-  transition: all 0.3s cubic-bezier(0.68, -0.55, 0.265, 1.55);
-  transform: translateY(100%);
+   text-align: center;
+   width: 120px;
+   position: absolute;
+   top: 0;
+   font-size: 10px;
+   background-color: #ffffff;
+   color: #ffffff;
+   padding: 0.5rem 1rem;
+   border-radius: 5px;
+   box-shadow: 0 10px 10px rgba(0, 0, 0, 0.1);
+   opacity: 0;
+   pointer-events: none;
+   transition: all 0.3s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+   transform: translateY(100%);
 }
 
 .tooltip-timeline::before {
-  position: absolute;
-  content: "";
-  height: 8px;
-  width: 8px;
-  background-color: #ffffff;
-  top: -3px;
-  left: 50%;
-  transform: translate(-50%) rotate(45deg);
-  transition: all 0.3s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+   position: absolute;
+   content: '';
+   height: 8px;
+   width: 8px;
+   background-color: #ffffff;
+   top: -3px;
+   left: 50%;
+   transform: translate(-50%) rotate(45deg);
+   transition: all 0.3s cubic-bezier(0.68, -0.55, 0.265, 1.55);
 }
 .icon-navbar-view:hover .tooltip-timeline {
-  top: 45px;
-  opacity: 1;
-  visibility: visible;
-  pointer-events: auto;
+   top: 45px;
+   opacity: 1;
+   visibility: visible;
+   pointer-events: auto;
 }
 
 .icon-navbar-view:hover span,
 .icon:hover .tooltip-timeline {
-  text-shadow: 0px -1px 0px rgba(0, 0, 0, 0.1);
+   text-shadow: 0px -1px 0px rgba(0, 0, 0, 0.1);
 }
 
 .timeline:hover,
 .timeline:hover .tooltip-timeline::before {
-  background-color: #313236;
-  color: var(--blue-alt);
+   background-color: #313236;
+   color: var(--blue-alt);
 }
 .timeline:hover .tooltip-timeline {
-  background-color: #313236;
-  color: var(--bg-color);
+   background-color: #313236;
+   color: var(--bg-color);
 }
 
 .global-fest h1,
 h2,
 h3,
 h4 {
-  letter-spacing: 1.2px;
-  text-transform: capitalize;
-  line-height: 1.25;
-  margin-bottom: 0.75rem;
+   letter-spacing: 1.2px;
+   text-transform: capitalize;
+   line-height: 1.25;
+   margin-bottom: 0.75rem;
 }
 
-.js-cont { 
-  background-color: var(--bg-color);
+.js-cont {
+   background-color: var(--bg-color);
 }
 
 @media screen and (min-width: 800px) {
-  .global-fest h1 {
-    font-size: 4rem;
-  }
-  .global-fest h2 {
-    font-size: 2.5rem;
-  }
-  .global-fest h3 {
-    font-size: 1.75rem;
-  }
-  .global-fest h4 {
-    font-size: 1rem;
-  }
+   .global-fest h1 {
+      font-size: 4rem;
+   }
+   .global-fest h2 {
+      font-size: 2.5rem;
+   }
+   .global-fest h3 {
+      font-size: 1.75rem;
+   }
+   .global-fest h4 {
+      font-size: 1rem;
+   }
 
-  .global-fest h1,
-  h2,
-  h3,
-  h4 {
-    line-height: 1;
-  }
+   .global-fest h1,
+   h2,
+   h3,
+   h4 {
+      line-height: 1;
+   }
 }
 .global-fest {
-  background-color: var(--bg-color);
-  padding: 5rem 0;
+   background-color: var(--bg-color);
+   padding: 5rem 0;
 }
 
 .gall-title {
-  color: var(--blue-alt);
-  text-align: center;
+   color: var(--blue-alt);
+   text-align: center;
 }
 
 .gall-title h1 {
-  /* e661cb
+   /* e661cb
    f78a8b */
-  background-color: #f8ceec;
-  background-image: linear-gradient(
-    315deg,
-    var(--purple-light) 0%,
-    #6154f3 90%
-  );
-  background-clip: text;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  font-size: 5rem;
-  font-weight: 900;
-  text-transform: uppercase;
-  animation: transitionIn 0.3s;
+   background-color: #f8ceec;
+   background-image: linear-gradient(315deg, var(--purple-light) 0%, #6154f3 90%);
+   background-clip: text;
+   -webkit-background-clip: text;
+   -webkit-text-fill-color: transparent;
+   font-size: 5rem;
+   font-weight: 900;
+   text-transform: uppercase;
+   animation: transitionIn 0.3s;
 }
 
 .underline {
-  width: 5rem;
-  height: 0.25rem;
-  background-color: var(--blue-alt-ctrl);
-  margin: 0 auto;
-  margin-bottom: 3rem;
-  animation: transitionIn 0.3s;
+   width: 5rem;
+   height: 0.25rem;
+   background-color: var(--blue-alt-ctrl);
+   margin: 0 auto;
+   margin-bottom: 3rem;
+   animation: transitionIn 0.3s;
 }
 
 .gall-btn-cont {
-  background-color: var(--light-gray-alt);
-  max-width: 800px;
-  display: flex;
-  justify-content: center;
-  margin: 0 auto;
-  gap: 1rem;
-  padding: 1rem;
-  border-radius: 12px;
-  margin-bottom: 4rem;
-  animation: transitionIn 0.3s;
+   background-color: var(--light-gray-alt);
+   max-width: 800px;
+   display: flex;
+   justify-content: center;
+   margin: 0 auto;
+   gap: 1rem;
+   padding: 1rem;
+   border-radius: 12px;
+   margin-bottom: 4rem;
+   animation: transitionIn 0.3s;
 }
 .filter-btn.search-hide {
-  display: none;
-  transition: all 500ms cubic-bezier(0, 0.11, 0.35, 2);
+   display: none;
+   transition: all 500ms cubic-bezier(0, 0.11, 0.35, 2);
 }
 .filter-btn {
-  /* display: none; */
-  display: block;
-  background-color: var(--light-gray-alt);
-  color: var(--blue-alt-ctrl);
-  border-color: var(--blue-alt);
-  border: 1.9px solid var(--blue-alt);
-  width: 140px;
-  border-radius: 50px;
-  font-size: 1rem;
-  text-transform: capitalize;
-  margin: 0 0.5rem;
-  letter-spacing: 1px;
-  padding: 0.375rem 0.2rem;
-  cursor: pointer;
-  transition: all 0.1s ease;
+   /* display: none; */
+   display: block;
+   background-color: var(--light-gray-alt);
+   color: var(--blue-alt-ctrl);
+   border-color: var(--blue-alt);
+   border: 1.9px solid var(--blue-alt);
+   width: 140px;
+   border-radius: 50px;
+   font-size: 1rem;
+   text-transform: capitalize;
+   margin: 0 0.5rem;
+   letter-spacing: 1px;
+   padding: 0.375rem 0.2rem;
+   cursor: pointer;
+   transition: all 0.1s ease;
 }
 .active,
 .filter-btn:hover {
-  transform: scale(1.1);
-  background-color: var(--blue-alt);
-  /* background-image: linear-gradient(180deg, var(--purple-light) 0%, #6154f3 100%); */
-  color: white;
-  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 24px 0px;
+   transform: scale(1.1);
+   background-color: var(--blue-alt);
+   /* background-image: linear-gradient(180deg, var(--purple-light) 0%, #6154f3 100%); */
+   color: white;
+   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 24px 0px;
 }
 /* 🤬🤬🤬🤬🤬🤬 */
 .search-festival {
-  position: relative;
-  width: 38.6px;
-  height: 38.6px;
-  background-color: var(--light-gray-alt);
-  border: 1.9px solid var(--blue-alt);
-  border-radius: 60px;
-  /* box-shadow: 0 0 0 5px #2573ef; */
-  overflow: hidden;
-  transition: all 300ms cubic-bezier(0, 0.11, 0.35, 2.06);
-  /* transition: all 0.3s ease; */
-  z-index: 95;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
+   position: relative;
+   width: 38.6px;
+   height: 38.6px;
+   background-color: var(--light-gray-alt);
+   border: 1.9px solid var(--blue-alt);
+   border-radius: 60px;
+   /* box-shadow: 0 0 0 5px #2573ef; */
+   overflow: hidden;
+   transition: all 300ms cubic-bezier(0, 0.11, 0.35, 2.06);
+   /* transition: all 0.3s ease; */
+   z-index: 95;
+   display: flex;
+   justify-content: center;
+   align-items: center;
 }
 
 .search-festival .icon-font-awesome {
-  width: 40px;
-  height: 38.6px;
-  color: var(--blue-alt);
-  font-size: 1rem;
-  background-color: var(--light-gray-alt);
-  border-radius: 60px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  z-index: 95;
-  cursor: pointer;
+   width: 40px;
+   height: 38.6px;
+   color: var(--blue-alt);
+   font-size: 1rem;
+   background-color: var(--light-gray-alt);
+   border-radius: 60px;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   z-index: 95;
+   cursor: pointer;
 }
 
 .icon-font-awesome:hover {
-  background-color: var(--blue-alt);
-  /* background-image: linear-gradient(180deg, var(--purple-light) 0%, #6154f3 100%); */
-  color: white;
-  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 24px 0px;
+   background-color: var(--blue-alt);
+   /* background-image: linear-gradient(180deg, var(--purple-light) 0%, #6154f3 100%); */
+   color: white;
+   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 24px 0px;
 }
 
 .search-festival.search-active {
-  width: 100%;
+   width: 100%;
 }
 
 .search-festival .input-search {
-  position: relative;
-  /* right: 60px; */
-  width: 100%;
-  height: 100%;
-  left: 30px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+   position: relative;
+   /* right: 60px; */
+   width: 100%;
+   height: 100%;
+   left: 30px;
+   display: flex;
+   justify-content: center;
+   align-items: center;
 }
 .search-festival .input-search input {
-  position: relative;
-  top: 0;
-  right: 24px;
-  width: 100%;
-  height: 100%;
-  border: none;
-  outline: none;
-  font-size: 1rem;
-  padding: 10px 0;
-  background-color: var(--light-gray-alt);
+   position: relative;
+   top: 0;
+   right: 24px;
+   width: 100%;
+   height: 100%;
+   border: none;
+   outline: none;
+   font-size: 1rem;
+   padding: 10px 0;
+   background-color: var(--light-gray-alt);
 }
 
 .clear {
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  width: 15px;
-  height: 15px;
-  right: 15px;
+   position: absolute;
+   top: 50%;
+   transform: translateY(-50%);
+   width: 15px;
+   height: 15px;
+   right: 15px;
 
-  cursor: pointer;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+   cursor: pointer;
+   display: flex;
+   justify-content: center;
+   align-items: center;
 }
 
 .clear::before {
-  position: absolute;
-  content: "";
-  width: 1px;
-  height: 15px;
-  background: #999;
-  transform: rotate(45deg);
+   position: absolute;
+   content: '';
+   width: 1px;
+   height: 15px;
+   background: #999;
+   transform: rotate(45deg);
 }
 
 .clear::after {
-  position: absolute;
-  content: "";
-  width: 1px;
-  height: 15px;
-  background: #999;
-  transform: rotate(315deg);
+   position: absolute;
+   content: '';
+   width: 1px;
+   height: 15px;
+   background: #999;
+   transform: rotate(315deg);
 }
 
 /* 🤬🤬🤬🤬🤬🤬 */
 #search-result-empty-state {
-  display: none;
+   display: none;
 }
 .search-empty-state {
-  text-align: center;
-  max-width: 370px;
-  margin: 10vh auto;
-  padding: 0 20px;
+   text-align: center;
+   max-width: 370px;
+   margin: 10vh auto;
+   padding: 0 20px;
 }
 
 .search-empty-state .search-empty-icon {
-  margin-bottom: 25px;
+   margin-bottom: 25px;
 }
 .bold {
-  font-weight: 600;
+   font-weight: 600;
 }
 
 .search-empty-state .l-font-size {
-  font-size: 24px;
-  margin-bottom: 10px;
+   font-size: 24px;
+   margin-bottom: 10px;
 }
 .search-empty-state .m-font-size {
-  font-size: 16px;
-  color: #7d7a9e;
+   font-size: 16px;
+   color: #7d7a9e;
 }
 
 .fest-gallery-main {
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-  max-width: 1400px;
-  margin: 0 auto;
+   display: flex;
+   justify-content: center;
+   flex-wrap: wrap;
+   max-width: 1400px;
+   margin: 0 auto;
 }
 .m-font-size {
-  font-size: 16px;
+   font-size: 16px;
 }
 .festival-card {
-  position: relative;
-  width: 300px;
-  height: 420px;
-  background: white;
-  border-radius: 20px;
-  overflow: hidden;
-  margin: 1.2rem;
-  animation: animate 0.4s ease;
+   position: relative;
+   width: 300px;
+   height: 420px;
+   background: white;
+   border-radius: 20px;
+   overflow: hidden;
+   margin: 1.2rem;
+   animation: animate 0.4s ease;
 }
 
 .festival-card:hover {
-  box-shadow: rgba(0, 0, 0, 0.25) 0px 25px 40px -20px;
+   box-shadow: rgba(0, 0, 0, 0.25) 0px 25px 40px -20px;
 
-  /* box-shadow: rgba(0, 0, 0, 0.1) 0px 20px 25px -5px, rgba(0, 0, 0, 0.04) 0px 10px 10px -5px; */
+   /* box-shadow: rgba(0, 0, 0, 0.1) 0px 20px 25px -5px, rgba(0, 0, 0, 0.04) 0px 10px 10px -5px; */
 }
 
 .festival-card .img-box {
- position: relative;
-  width: 100%;
-  height: 90%;
+   position: relative;
+   width: 100%;
+   height: 90%;
 }
 
 .img-box img {
-  object-fit: cover;
-  height: 100%;
-  width: 100%;
-  border-radius: 0 0 20px 20px;
-  vertical-align: middle;
-  transition: all 0.3s ease;
+   object-fit: cover;
+   height: 100%;
+   width: 100%;
+   border-radius: 0 0 20px 20px;
+   vertical-align: middle;
+   transition: all 0.3s ease;
 }
 
 .fest-info {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  border-radius: 20px 20px 0px 0px;
-  height: 30px;
-  text-align: center;
-  transition: .3s;
-  z-index: 90;
+   position: absolute;
+   bottom: 0;
+   width: 100%;
+   border-radius: 20px 20px 0px 0px;
+   height: 30px;
+   text-align: center;
+   transition: 0.3s;
+   z-index: 90;
 }
 .fest-info {
-  margin: 0;
+   margin: 0;
 }
 
 .fest-info h3 {
-  color: var(--dark-blue-alt);
-  font-size: 1.5rem;
-  font-weight: 600;
-  text-transform: capitalize;
+   color: var(--dark-blue-alt);
+   font-size: 1.5rem;
+   font-weight: 600;
+   text-transform: capitalize;
 }
 
 .festival-card:hover .fest-info {
-  height: 150px;
+   height: 150px;
 }
 
 .festival-card .fest-info .short-desc {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 8px 20px;
-  transition: 0.3s;
-  opacity: 0;
-  visibility: hidden;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   padding: 8px 20px;
+   transition: 0.3s;
+   opacity: 0;
+   visibility: hidden;
 }
 .short-desc p {
-  color: var(--blue-alt-ctrl);
-  font-size: 1rem;
-  font-family: "Poppins", sans-serif;
-  font-weight: 400;
-  margin-right: 10px;
+   color: var(--blue-alt-ctrl);
+   font-size: 1rem;
+   font-family: 'Poppins', sans-serif;
+   font-weight: 400;
+   margin-right: 10px;
 }
 
 .festival-card:hover .fest-info .short-desc {
-  opacity: 1;
-  visibility: visible;
-  transition-delay: 0.2s;
+   opacity: 1;
+   visibility: visible;
+   transition-delay: 0.2s;
 }
 
 .festival-card:hover .fest-info {
-  padding-top: 2rem;
-  background-color: white;
+   padding-top: 2rem;
+   background-color: white;
 }
 
 .festival-card:hover .img-box img {
-  transform: scale(1.1);
+   transform: scale(1.1);
 }
 
 @media only screen and (max-width: 1380px) {
-  .fest-gallery-main {
-    max-width: 1200px;
-  }
+   .fest-gallery-main {
+      max-width: 1200px;
+   }
 }
 @media (max-width: 800px) {
-  .view-btns {
-    max-width: 17%;
-  }
+   .view-btns {
+      max-width: 17%;
+   }
 }
 @media (max-width: 700px) {
-  .nav-branding .img-branding:nth-child(2) {
-    display: none;
-  }
+   .nav-branding .img-branding:nth-child(2) {
+      display: none;
+   }
 }
 
 @media only screen and (max-width: 650px) {
-  .gall-btn-cont {
-    width: 90%;
-  }
-  .filter-btn {
-    font-size: 0.7rem;
-    width: 80px;
-  }
+   .gall-btn-cont {
+      width: 90%;
+   }
+   .filter-btn {
+      font-size: 0.7rem;
+      width: 80px;
+   }
 }
 @media only screen and (max-width: 550px) {
-  .filter-btn {
-    font-size: 0.7rem;
-    width: 80px;
-    margin: 0;
-  }
-  .icon-navbar-view.active-rn::before {
-    bottom: -0.5rem;
-  }
+   .filter-btn {
+      font-size: 0.7rem;
+      width: 80px;
+      margin: 0;
+   }
+   .icon-navbar-view.active-rn::before {
+      bottom: -0.5rem;
+   }
 }
 
 @media only screen and (max-width: 450px) {
-  .gall-btn-cont {
-    width: 90%;
-  }
-  .gall-title h1 {
-    font-size: 3.5rem;
-  }
-  .gall-btn-cont {
-    gap: 0.3rem;
-    padding: 0.7rem;
-  }
-  .filter-btn {
-    font-size: 0.6rem;
-    width: 70px;
-    margin: 0 0.3rem;
-  }
-  .festival-card {
-    width: 271px;
-    height: 380px;
-  }
+   .gall-btn-cont {
+      width: 90%;
+   }
+   .gall-title h1 {
+      font-size: 3.5rem;
+   }
+   .gall-btn-cont {
+      gap: 0.3rem;
+      padding: 0.7rem;
+   }
+   .filter-btn {
+      font-size: 0.6rem;
+      width: 70px;
+      margin: 0 0.3rem;
+   }
+   .festival-card {
+      width: 271px;
+      height: 380px;
+   }
 }
 
 @keyframes transitionIn {
-  from {
-    opacity: 0;
-    transform: translateY(-20px);
-    color: var(--blue-alt);
-  }
+   from {
+      opacity: 0;
+      transform: translateY(-20px);
+      color: var(--blue-alt);
+   }
 
-  to {
-    opacity: 1;
-    transform: translateY(0);
-    color: white;
-  }
+   to {
+      opacity: 1;
+      transform: translateY(0);
+      color: white;
+   }
 }
 
 @keyframes fadeIn {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
+   0% {
+      opacity: 0;
+   }
+   100% {
+      opacity: 1;
+   }
 }
 
 @-moz-keyframes fadeIn {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
+   0% {
+      opacity: 0;
+   }
+   100% {
+      opacity: 1;
+   }
 }
 
 @-webkit-keyframes fadeIn {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
+   0% {
+      opacity: 0;
+   }
+   100% {
+      opacity: 1;
+   }
 }
 
 @-o-keyframes fadeIn {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
+   0% {
+      opacity: 0;
+   }
+   100% {
+      opacity: 1;
+   }
 }
 
 @-ms-keyframes fadeIn {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
+   0% {
+      opacity: 0;
+   }
+   100% {
+      opacity: 1;
+   }
 }
 
 @keyframes animate {
-  0% {
-    transform: scale(0.5);
-  }
-  100% {
-    transform: scale(1);
-  }
+   0% {
+      transform: scale(0.5);
+   }
+   100% {
+      transform: scale(1);
+   }
 }
