--- a/src/assets/styles/navbar.css
+++ b/src/assets/styles/navbar.css
@@ -1,46 +1,46 @@
 * {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
+   padding: 0;
+   margin: 0;
+   box-sizing: border-box;
 }
 
 header {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  transition: 0.6s;
-  z-index: 100;
+   position: fixed;
+   top: 0;
+   left: 0;
+   width: 100%;
+   transition: 0.6s;
+   z-index: 100;
 }
 .sticky {
-  background-color: var(--dark-blue-alt);
+   background-color: var(--dark-blue-alt);
 }
 .sticky .sub-nav-menu li a {
-  color: var(--light-gray-alt);
+   color: var(--light-gray-alt);
 }
 
 .navbar {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  min-height: 60px;
-  max-width: 1200px;
-  margin: 0 auto;
-  padding: 0 40px;
+   display: flex;
+   justify-content: space-between;
+   align-items: center;
+   min-height: 60px;
+   max-width: 1200px;
+   margin: 0 auto;
+   padding: 0 40px;
 }
 .img-branding {
-  padding: 1px 10px 0px 0px;
-  height: 30px;
+   padding: 1px 10px 0px 0px;
+   height: 30px;
 }
 .img-branding img {
-  object-fit: cover;
-  width: 100%;
-  height: 100%;
+   object-fit: cover;
+   width: 100%;
+   height: 100%;
 }
 .nav-branding {
-  display: flex;
+   display: flex;
 
-  /* position: relative;
+   /* position: relative;
    color: white;
    font-size: 2rem;
    font-weight: 500;
@@ -51,148 +51,147 @@ header {
 }
 
 .sub-nav-menu {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  gap: 40px;
-  position: relative;
-  z-index: 101;
+   display: flex;
+   justify-content: space-between;
+   align-items: center;
+   gap: 40px;
+   position: relative;
+   z-index: 101;
 }
 .nav-item {
-  list-style: none;
-  position: relative;
+   list-style: none;
+   position: relative;
 }
 
 .nav-link {
-  color: white;
-  text-decoration: none;
-  position: relative;
+   color: white;
+   text-decoration: none;
+   position: relative;
 }
 
 .nav-link:hover {
-  color: var(--purple-light);
+   color: var(--purple-light);
 }
 
 .nav-link::after {
-  content: "";
-  height: 3px;
-  width: 0;
-  background: var(--purple-light);
-  position: absolute;
-  left: 0;
-  bottom: -10px;
-  transition: 0.5s;
+   content: '';
+   height: 3px;
+   width: 0;
+   background: var(--purple-light);
+   position: absolute;
+   left: 0;
+   bottom: -10px;
+   transition: 0.5s;
 }
 
 .nav-link:hover::after {
-  width: 100%;
+   width: 100%;
 }
 
 .hamburger {
-  display: none;
-  cursor: pointer;
-  margin: 1rem;
-  z-index: 1001;
-  transition: all 0.3s ease-in-out;
+   display: none;
+   cursor: pointer;
+   margin: 1rem;
+   z-index: 1001;
+   transition: all 0.3s ease-in-out;
 }
 .hamburger:hover {
-  transform: scale(1.1);
+   transform: scale(1.1);
 }
 .hamburger:hover span {
-  transform: scale(1.3);
+   transform: scale(1.3);
 }
 .hamburger:active {
-  transform: translateY(2px);
+   transform: translateY(2px);
 }
 .burger-bar {
-  display: block;
-  width: 25px;
-  height: 3px;
-  margin: 5px auto;
-  border-radius: 3px;
-  -webkit-transition: all 0.3s ease-in-out;
-  transition: all 0.3s ease;
-  background-color: var(--light-gray-alt);
+   display: block;
+   width: 25px;
+   height: 3px;
+   margin: 5px auto;
+   border-radius: 3px;
+   -webkit-transition: all 0.3s ease-in-out;
+   transition: all 0.3s ease;
+   background-color: var(--light-gray-alt);
 }
 
 @media (max-width: 740px) {
-  .hamburger {
-    display: block;
-  }
-  .hamburger.navbar-active .burger-bar:nth-child(1) {
-    transform: translateY(8px) rotate(45deg);
-  }
-  .hamburger.navbar-active .burger-bar:nth-child(3) {
-    transform: translateY(-8px) rotate(-45deg);
-  }
+   .hamburger {
+      display: block;
+   }
+   .hamburger.navbar-active .burger-bar:nth-child(1) {
+      transform: translateY(8px) rotate(45deg);
+   }
+   .hamburger.navbar-active .burger-bar:nth-child(3) {
+      transform: translateY(-8px) rotate(-45deg);
+   }
 
-  .hamburger.navbar-active .burger-bar:nth-child(2) {
-    opacity: 0;
-  }
+   .hamburger.navbar-active .burger-bar:nth-child(2) {
+      opacity: 0;
+   }
 
-  .hamburger.navbar-active:hover span {
-    transform: scale(1.5);
-    background-color: var(--orange-alt);
-  }
+   .hamburger.navbar-active:hover span {
+      transform: scale(1.5);
+      background-color: var(--orange-alt);
+   }
 
-  .nav-menu {
-    background-color: var(--dark-blue-alt);
-    background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
-      url(/images/2.jpg);
-    background-size: cover;
-    background-position: center;
-    min-height: 100vh;
-    width: 100vw;
-    flex-direction: column;
-    position: fixed;
-    left: 0;
-    top: -100%;
-    gap: 0;
-    text-align: center;
-    transition: 0.3s;
-    z-index: 1000;
-  }
-  .sub-nav-menu {
-    height: 100vh;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    gap: 0;
-    z-index: 1001;
-  }
+   .nav-menu {
+      background-color: var(--dark-blue-alt);
+      background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url(/images/2.jpg);
+      background-size: cover;
+      background-position: center;
+      min-height: 100vh;
+      width: 100vw;
+      flex-direction: column;
+      position: fixed;
+      left: 0;
+      top: -100%;
+      gap: 0;
+      text-align: center;
+      transition: 0.3s;
+      z-index: 1000;
+   }
+   .sub-nav-menu {
+      height: 100vh;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      gap: 0;
+      z-index: 1001;
+   }
 
-  .nav-item {
-    margin: 16px 0;
-  }
+   .nav-item {
+      margin: 16px 0;
+   }
 
-  .nav-menu.navbar-active {
-    top: 0;
-  }
+   .nav-menu.navbar-active {
+      top: 0;
+   }
 }
 
 @media (max-width: 550px) {
-  .navbar {
-    min-height: 20px;
-    padding: 0 8px;
-  }
-  .nav-branding {
-    width: 25px;
-  }
-  .img-branding {
-    padding: 1px 10px 0px 0px;
-    height: 22px;
-  }
-  .burger-bar {
-    width: 26px;
-    height: 2.5px;
-  }
-  .hamburger:hover span {
-    transform: scale(1.2);
-  }
-  .hamburger.navbar-active .burger-bar:nth-child(1) {
-    transform: translateY(7.5px) rotate(45deg);
-  }
-  .hamburger.navbar-active .burger-bar:nth-child(3) {
-    transform: translateY(-7.5px) rotate(-45deg);
-  }
+   .navbar {
+      min-height: 20px;
+      padding: 0 8px;
+   }
+   .nav-branding {
+      width: 25px;
+   }
+   .img-branding {
+      padding: 1px 10px 0px 0px;
+      height: 22px;
+   }
+   .burger-bar {
+      width: 26px;
+      height: 2.5px;
+   }
+   .hamburger:hover span {
+      transform: scale(1.2);
+   }
+   .hamburger.navbar-active .burger-bar:nth-child(1) {
+      transform: translateY(7.5px) rotate(45deg);
+   }
+   .hamburger.navbar-active .burger-bar:nth-child(3) {
+      transform: translateY(-7.5px) rotate(-45deg);
+   }
 }
