--- a/src/assets/styles/view-festival-details.css
+++ b/src/assets/styles/view-festival-details.css
@@ -1,31 +1,31 @@
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;600;900&display=swap%27");
-@import url("https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@0,400;0,600;1,400;1,600;1,700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;600;900&display=swap%27');
+@import url('https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@0,400;0,600;1,400;1,600;1,700&display=swap');
 :root {
-  --light-gray: #f0f2f7;
-  --light-gray-alt: #e4e7ef;
-  --dark-gray: #b9bed1;
-  --dark-gray-alt: #a1a6bb;
-  --dark-blue: #2a405b;
-  --dark-blue-alt: #222328;
-  --blue: #3b55e6;
-  --blue-alt: #334cd5;
-  --yellow: #f3d351;
-  --yellow-alt: #ebc63b;
-  --orange: #fe5339;
-  --orange-alt: #eb4e36;
-  --aqua: #51dae7;
-  --aqua-alt: #32cdda;
-  --green: #4be1ab;
-  --green-alt: #42d29e;
-  --line-border-fill: #9c27b0;
-  --line-border-empty: #bdbdbd;
+   --light-gray: #f0f2f7;
+   --light-gray-alt: #e4e7ef;
+   --dark-gray: #b9bed1;
+   --dark-gray-alt: #a1a6bb;
+   --dark-blue: #2a405b;
+   --dark-blue-alt: #222328;
+   --blue: #3b55e6;
+   --blue-alt: #334cd5;
+   --yellow: #f3d351;
+   --yellow-alt: #ebc63b;
+   --orange: #fe5339;
+   --orange-alt: #eb4e36;
+   --aqua: #51dae7;
+   --aqua-alt: #32cdda;
+   --green: #4be1ab;
+   --green-alt: #42d29e;
+   --line-border-fill: #9c27b0;
+   --line-border-empty: #bdbdbd;
 }
 
 * {
-  box-sizing: border-box;
-  font-family: "Montserrat", sans-serif;
-  margin: 0;
-  padding: 0;
+   box-sizing: border-box;
+   font-family: 'Montserrat', sans-serif;
+   margin: 0;
+   padding: 0;
 }
 
 /************************************************    back menu - start     ***************************************************/
@@ -37,225 +37,225 @@
   padding: 5px;
 } */
 .back {
-  display: flex; 
-  align-items: center;
-  gap: 12px;
-  color: var(--dark-blue-alt);
-  border: none;
-  background-color: transparent;
-  font-size: 1rem;
-  text-transform: uppercase;
-  /* position: absolute;
+   display: flex;
+   align-items: center;
+   gap: 12px;
+   color: var(--dark-blue-alt);
+   border: none;
+   background-color: transparent;
+   font-size: 1rem;
+   text-transform: uppercase;
+   /* position: absolute;
   top: 60px;
   left: 40px; */
-  transition: transform 0.2s;
-  cursor: pointer;
+   transition: transform 0.2s;
+   cursor: pointer;
 }
 
 .back:not(:disabled):hover {
-  transform: scale(1.05);
+   transform: scale(1.05);
 }
 .back:not(:disabled):hover:active {
-  transform: scale(1.05) translateX(-0.225rem);
+   transform: scale(1.05) translateX(-0.225rem);
 }
 
 .back:focus:before {
-  content: "";
-  left: calc(-1 * 0.375rem);
-  pointer-events: none;
-  position: absolute;
-  top: calc(-1 * 0.375rem);
-  transition: border-radius;
-  user-select: none;
+   content: '';
+   left: calc(-1 * 0.375rem);
+   pointer-events: none;
+   position: absolute;
+   top: calc(-1 * 0.375rem);
+   transition: border-radius;
+   user-select: none;
 }
 .img-branding {
-  margin: 0.4rem 0;
+   margin: 0.4rem 0;
 }
 
 /************************************************    back menu - end     ***************************************************/
 
 /************************************************    Festival Start - end     ***************************************************/
 .fest-container {
-  max-width: 1200px;
-  margin: 2rem auto;
-  background-color: white;
-  overflow-y: auto;
+   max-width: 1200px;
+   margin: 2rem auto;
+   background-color: white;
+   overflow-y: auto;
 }
 
 .fest-island-group {
-  background-color: var(--dark-blue);
-  color: white;
-  font-size: 0.8rem;
-  font-weight: 600;
-  text-align: center;
-  text-transform: uppercase;
-  width: 6rem;
-  padding: 0.4rem 0.3rem;
-  margin: auto;
-  border-radius: 50px;
-  cursor: pointer;
+   background-color: var(--dark-blue);
+   color: white;
+   font-size: 0.8rem;
+   font-weight: 600;
+   text-align: center;
+   text-transform: uppercase;
+   width: 6rem;
+   padding: 0.4rem 0.3rem;
+   margin: auto;
+   border-radius: 50px;
+   cursor: pointer;
 }
 
 .fest-header {
-  display: flex;
-  justify-content: center;
-  font-size: 7rem;
-  font-weight: 900;
-  text-align: center;
-  letter-spacing: 6px;
-  margin: 0;
-  text-transform: uppercase;
-  /* background: url(/images/bg-contact-us.jpg) 50% 50%; */
-  background-size: cover;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  text-shadow: 3px 3px 7px rgba(12, 12, 12, 0.3);
-  margin: 1rem 0;
+   display: flex;
+   justify-content: center;
+   font-size: 7rem;
+   font-weight: 900;
+   text-align: center;
+   letter-spacing: 6px;
+   margin: 0;
+   text-transform: uppercase;
+   /* background: url(/images/bg-contact-us.jpg) 50% 50%; */
+   background-size: cover;
+   -webkit-background-clip: text;
+   -webkit-text-fill-color: transparent;
+   text-shadow: 3px 3px 7px rgba(12, 12, 12, 0.3);
+   margin: 1rem 0;
 }
 .fa-map-marker-alt {
-  padding-right: 0.5rem;
+   padding-right: 0.5rem;
 }
 .fest-date {
-  background-color: white;
-  color: var(--dark-gray-alt);
-  font-weight: 500;
-  font-size: 0.8rem;
-  text-align: center;
-  text-transform: capitalize;
-  letter-spacing: 3px;
-  padding: 0.2rem 0.3rem;
-  margin: auto;
-  margin-bottom: 1rem;
+   background-color: white;
+   color: var(--dark-gray-alt);
+   font-weight: 500;
+   font-size: 0.8rem;
+   text-align: center;
+   text-transform: capitalize;
+   letter-spacing: 3px;
+   padding: 0.2rem 0.3rem;
+   margin: auto;
+   margin-bottom: 1rem;
 }
 .fest-loc {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 4px;
-  background-color: white;
-  color: var(--dark-gray-alt);
-  font-weight: 600;
-  font-size: 0.6rem;
-  text-align: center;
-  text-transform: uppercase;
-  width: 10rem;
-  padding: 0.2rem 0.3rem;
-  margin: auto;
-  margin-bottom: 3rem;
-  border: var(--light-gray-alt) 0.5px solid;
-  border-radius: 50px;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   gap: 4px;
+   background-color: white;
+   color: var(--dark-gray-alt);
+   font-weight: 600;
+   font-size: 0.6rem;
+   text-align: center;
+   text-transform: uppercase;
+   width: 10rem;
+   padding: 0.2rem 0.3rem;
+   margin: auto;
+   margin-bottom: 3rem;
+   border: var(--light-gray-alt) 0.5px solid;
+   border-radius: 50px;
 }
 .fest-parag-cont {
-  max-width: 800px;
-  margin: 0 auto;
+   max-width: 800px;
+   margin: 0 auto;
 }
 .fest-parag {
-  font-family: "Crimston Text", serif;
-  color: var(--dark-blue-alt);
-  font-weight: 400;
-  font-size: 16px;
-  text-align: justify;
-  line-height: 1.5;
+   font-family: 'Crimston Text', serif;
+   color: var(--dark-blue-alt);
+   font-weight: 400;
+   font-size: 16px;
+   text-align: justify;
+   line-height: 1.5;
 }
 
 .image {
-  width: 100%;
-  height: 493px;
-  margin: 2rem auto;
-  padding: 0 2rem;
+   width: 100%;
+   height: 493px;
+   margin: 2rem auto;
+   padding: 0 2rem;
 }
 .image img {
-  height: 100%;
-  width: 100%;
-  object-fit: cover;
+   height: 100%;
+   width: 100%;
+   object-fit: cover;
 }
 
 .fest-container h3 {
-  margin-top: 1.2rem;
-  font-size: 1.3rem;
+   margin-top: 1.2rem;
+   font-size: 1.3rem;
 }
 
 /**************************    Festival Activities - start     ***********************************/
 .container {
-  display: flex;
-  width: 100%;
-  padding: 4% 0;
-  box-sizing: border-box;
-  height: 400px;
+   display: flex;
+   width: 100%;
+   padding: 4% 0;
+   box-sizing: border-box;
+   height: 400px;
 }
 .box {
-  flex: 1;
-  overflow: hidden;
-  transition: 0.5s;
-  margin: 0 3px;
-  box-shadow: 0 20px 30px rgba(0, 0, 0, 0.1);
-  line-height: 0;
-  border-radius: 12px;
-  overflow: hidden;
+   flex: 1;
+   overflow: hidden;
+   transition: 0.5s;
+   margin: 0 3px;
+   box-shadow: 0 20px 30px rgba(0, 0, 0, 0.1);
+   line-height: 0;
+   border-radius: 12px;
+   overflow: hidden;
 }
 .box > img {
-  width: 200%;
-  height: calc(100%);
-  object-fit: cover;
-  transition: 0.5s;
+   width: 200%;
+   height: calc(100%);
+   object-fit: cover;
+   transition: 0.5s;
 }
 .box > span {
-  font-family: inherit;
-  font-size: 1rem;
-  display: block;
-  text-align: center;
-  line-height: 1;
+   font-family: inherit;
+   font-size: 1rem;
+   display: block;
+   text-align: center;
+   line-height: 1;
 }
 .box:hover {
-  flex: 1 1 50%;
+   flex: 1 1 50%;
 }
 .box:hover > span {
-  width: 100%;
-  height: 100%;
+   width: 100%;
+   height: 100%;
 }
 .box:hover > img {
-  width: 100%;
-  height: 100%;
+   width: 100%;
+   height: 100%;
 }
 
 /**************************    Festival Activities - end     ***********************************/
 /**************************    Festival Videos - start     ***********************************/
 .video-wrapper {
-  position: relative;
-  padding-bottom: 65.25%;
-  height: 0;
+   position: relative;
+   padding-bottom: 65.25%;
+   height: 0;
 }
 .video-wrapper iframe {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
+   position: absolute;
+   top: 0;
+   left: 0;
+   width: 100%;
+   height: 100%;
 }
 /**************************    Festival Videos - end     ***********************************/
 /**************************    Festival references - start     ***********************************/
 .content-fest-link-source {
-  display: flex;
-  justify-content: center;
-  padding: 0.5rem;
-  margin: 3rem auto 1rem auto;
-  background-color: white;
-  width: 120px;
-  border-radius: 50px;
-  cursor: pointer;
-  border: var(--light-gray-alt) 0.5px solid;
-  transition: transform 0.2s;
-  font-weight: 500;
-  text-decoration: none;
-  color: var(--dark-gray-alt);
-  font-size: 0.7rem;
-  text-transform: uppercase;
+   display: flex;
+   justify-content: center;
+   padding: 0.5rem;
+   margin: 3rem auto 1rem auto;
+   background-color: white;
+   width: 120px;
+   border-radius: 50px;
+   cursor: pointer;
+   border: var(--light-gray-alt) 0.5px solid;
+   transition: transform 0.2s;
+   font-weight: 500;
+   text-decoration: none;
+   color: var(--dark-gray-alt);
+   font-size: 0.7rem;
+   text-transform: uppercase;
 }
 
 .content-fest-link-source:hover {
-  transform: scale(1.05) translateY(0.125rem);
-  box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.22);
-  border: 0;
+   transform: scale(1.05) translateY(0.125rem);
+   box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.22);
+   border: 0;
 }
 /**************************    Festival references - end     ***********************************/
 /************************************************    Festival End - end     ***************************************************/
@@ -263,70 +263,70 @@
 /* responsive */
 
 @media only screen and (max-width: 860px) {
-  /* .back i {
+   /* .back i {
   } */
-  .back {
-    font-size: 0.9rem;
-    left: 25px;
-  }
-  .fest-header {
-    font-size: 12vw;
-  }
-  .fest-parag-cont {
-    width: 85%;
-  }
-  .content-fest-link-source {
-    margin: 3rem auto 0 auto;
-  }
+   .back {
+      font-size: 0.9rem;
+      left: 25px;
+   }
+   .fest-header {
+      font-size: 12vw;
+   }
+   .fest-parag-cont {
+      width: 85%;
+   }
+   .content-fest-link-source {
+      margin: 3rem auto 0 auto;
+   }
 }
 @media only screen and (max-width: 660px) {
-  .back {
-    font-size: 2.3rem;
-    top: 5.5px;
-    left: 25px;
-  }
-  .back-hide {
-    display: none;
-  }
-  .img-branding {
-    margin: 0.3rem 0;
-  }
-  .back:not(:disabled):hover:active {
-    transform: scale(1.05) translateX(-0.325rem);
-  }
+   .back {
+      font-size: 2.3rem;
+      top: 5.5px;
+      left: 25px;
+   }
+   .back-hide {
+      display: none;
+   }
+   .img-branding {
+      margin: 0.3rem 0;
+   }
+   .back:not(:disabled):hover:active {
+      transform: scale(1.05) translateX(-0.325rem);
+   }
 }
 @media only screen and (max-width: 600px) {
-  .fest-header {
-    font-size: 11vw;
-  }
+   .fest-header {
+      font-size: 11vw;
+   }
 
-  .fest-island-group {
-    width: 5rem;
-    font-size: 0.6rem;
-  }
-  .fest-date {
-    font-size: 0.7rem;
-  }
-  .fest-loc {
-    width: 8rem;
-    font-size: 0.4rem;
-  }
-  .content-fest-link-source {
-    font-size: 0.7rem;
-  }
+   .fest-island-group {
+      width: 5rem;
+      font-size: 0.6rem;
+   }
+   .fest-date {
+      font-size: 0.7rem;
+   }
+   .fest-loc {
+      width: 8rem;
+      font-size: 0.4rem;
+   }
+   .content-fest-link-source {
+      font-size: 0.7rem;
+   }
 }
 
 @media only screen and (max-width: 550px) {
-  .back {
-    font-size: 2.1rem;
-    top: 5.5px;
-    left: 25px;
-  }
-  .image {
-    max-width: 100%;
-    height: 450px;
-    margin: 2rem 0;
-    padding: 0 2rem;
-    object-fit: cover;
-  }
+   .back {
+      font-size: 2.1rem;
+      top: 5.5px;
+      left: 25px;
+   }
+   .image {
+      max-width: 100%;
+      height: 450px;
+      margin: 2rem 0;
+      padding: 0 2rem;
+      object-fit: cover;
+   }
 }
